# json-render

./: pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/agents/: open-source-librarian.md
.claude/commands/: commit.md
json-render-py/: README.md  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
json-render-py/examples/langchain-app/: README.md  example_result.md  main.py  pyproject.toml
json-render-py/examples/web/lib/: catalog-ex1.ts
json-render-py/scripts/: generate-prompt.ts
json-render-py/src/json_render/: __init__.py  bridge.py
json-render-py/tests/: __init__.py  test_bridge.py
json-render-py/tests/fixtures/: test-catalog.ts
